<resources>
    <string name="app_name">CSSE - Transport</string>
    <string name="bus">bus</string>
    <string name="welcome_to_the_transport_app">Welcome to the Transport App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_enter_your_details_to_register_on_the_app">Please enter your details to Register on the app</string>
    <string name="full_name">Full Name*</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="email_address">Email Address*</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth(dd/mm/yyyy)*</string>
    <string name="enter_you_date_of_birth_dd_mm_yyyy">Select your date of birth (dd/mm/yyyy)</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="enter_your_mobile_number_without_94">Enter your mobile number (without +94)</string>
    <string name="password">Password*</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="please_enter_your_details_to_login">Please enter your credentials to login</string>
    <string name="eye">eye</string>
    <string name="profile">profile</string>
    <string name="loading">Loading...</string>
    <string name="user">user</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_email">Update Email</string>
    <string name="change_password">Change password</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_your_registered_email_to_receive_password_reset_link">Please enter your registered email to receive password reset link</string>
    <string name="enter_your_registered_email_address">Enter your registered email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="upload_your_profile_picture">Upload your profile picture</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="welcome">Welcome to the Transport App</string>
    <string name="icon">icon</string>
    <string name="qr_scan">QR Scan</string>
    <string name="qr_code_scanning">QR Code Scanning</string>
    <string name="result">Result</string>
    <string name="refresh">Refresh</string>
    <string name="process">Process</string>
    <string name="ticketing">Ticketing</string>
    <string name="paycard_details">Card Details</string>
    <string name="paypay_amount">Pay Amount</string>
    <string name="payname_on_card">Name On Card</string>
    <string name="paycard_number">Card Number</string>
    <string name="paycvv">CVV</string>
    <string name="paymm_yy">MM/YY</string>
    <string name="paywe_accept">We Accept</string>
    <string name="payimg1">payimg1</string>
    <string name="payimg2">payimg2</string>
    <string name="payimg3">payimg3</string>
    <string name="payimage4">payimage4</string>
    <string name="recharge_amount">Recharge Amount</string>
    <string name="your_account_balance_details">Your Account Balance Details</string>
</resources>