<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            android:id="@+id/title_register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_details_to_register_on_the_app"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/fullname_register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_register_tv"
            android:layout_marginTop="50dp"
            android:text="@string/full_name"
            android:textColor="@color/tv_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fullname_register_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/fullname_register_tv"
            android:background="@drawable/border_et"
            android:hint="@string/enter_your_full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:textColor="@color/et_text"
            android:textColorHint="@color/et_hint"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/email_register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fullname_register_et"
            android:layout_marginTop="10dp"
            android:text="@string/email_address"
            android:textColor="@color/tv_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_register_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/email_register_tv"
            android:background="@drawable/border_et"
            android:hint="@string/enter_your_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textColor="@color/et_text"
            android:textColorHint="@color/et_hint"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/dob_register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_register_et"
            android:layout_marginTop="10dp"
            android:text="@string/date_of_birth_dd_mm_yyyy"
            android:textColor="@color/tv_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/dob_register_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/dob_register_tv"
            android:background="@drawable/border_et"
            android:focusable="false"
            android:hint="@string/enter_you_date_of_birth_dd_mm_yyyy"
            android:importantForAutofill="no"
            android:inputType="date"
            android:padding="6dp"
            android:textColor="@color/et_text"
            android:textColorHint="@color/et_hint"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/mobile_register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dob_register_et"
            android:layout_marginTop="10dp"
            android:text="@string/mobile_number"
            android:textColor="@color/tv_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/mobile_register_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/mobile_register_tv"
            android:background="@drawable/border_et"
            android:hint="@string/enter_your_mobile_number_without_94"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="6dp"
            android:textColor="@color/et_text"
            android:textColorHint="@color/et_hint"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/psd_register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile_register_et"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/tv_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/psd_register_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/psd_register_tv"
            android:background="@drawable/border_et"
            android:hint="@string/enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="@color/et_text"
            android:textColorHint="@color/et_hint"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/repsd_register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/psd_register_et"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_password"
            android:textColor="@color/tv_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/repsd_register_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/repsd_register_tv"
            android:background="@drawable/border_et"
            android:hint="@string/confirm_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="@color/et_text"
            android:textColorHint="@color/et_hint"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/repsd_register_et"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:text="@string/register"
            android:textAllCaps="false" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone" />


    </RelativeLayout>

</ScrollView>