<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:padding="15dp">

        <ImageView
            android:id="@+id/logo_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bus"
            android:maxWidth="180dp"
            app:srcCompat="@drawable/ic_bus" />

        <TextView
            android:id="@+id/welcome_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_imageview"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_to_the_transport_app"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_textview"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="70dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="70dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="16sp" />


    </RelativeLayout>
</ScrollView>