<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".UpdateprofileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            android:id="@+id/upload_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_your_profile_picture"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/upload_title_tv"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="70dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/choose_picture"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageview_uploaded"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_below="@id/btn_choose"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_et"
            android:contentDescription="@string/profile"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview_uploaded"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:text="@string/upload_picture"
            android:textAllCaps="false" />

        <ProgressBar
            android:id="@+id/progressUP"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>