<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".Forgotpassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            android:id="@+id/forgot_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/please_enter_your_registered_email_to_receive_password_reset_link"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/email_forgot_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_title_tv"
            android:layout_marginTop="50dp"
            android:padding="6dp"
            android:text="@string/email_address"
            android:textColor="@color/tv_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_forgot_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/email_forgot_tv"
            android:background="@drawable/border_et"
            android:hint="@string/enter_your_registered_email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textColor="@color/et_text"
            android:textColorHint="@color/et_hint"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_resetpsd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_forgot_et"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:text="@string/reset_password"
            android:textAllCaps="false" />

        <ProgressBar
            android:id="@+id/progressR"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>